--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -3,7 +3,6 @@
     <title>Survivalcraft Trivia - Quiz</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="icon" type="favicon" href="../img/site-favicon.ico">
     <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.min.css">
@@ -16,7 +15,8 @@
     <script src="../js/main.js" defer></script>
 </head>
 <body>
-    <section class="_content-loading">
+  <main>
+    <section id="quiz_pageContainer" class="content_loading">
         <div id="quiz_mainGridContainer">
             <p id="quiz_progressHeading">Quiz Progress</p>
             <div id="quiz_progressContainer">
@@ -31,6 +31,7 @@
             <input id="quiz_quitButton" class="btn-general" type="button" value="Quit">
         </div>
     </section>
+  </main>  
 </body>
 <html>
 <style>
