--- a/pgs/setup.html
+++ b/pgs/setup.html
@@ -3,7 +3,6 @@
     <title>Survivalcraft Trivia - Setup</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="icon" type="favicon" href="../img/site-favicon.ico">
     <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.min.css">
@@ -17,6 +16,7 @@
 
 </head>
 <body>
+  <main>
     <section id="setup_pageContainer" class="content_loading">
       <h2>Survivalcraft Trivia</h2>
       <h3>Difficulty Tier</h3>
@@ -68,6 +68,7 @@
       <input id="setup_resetButton" class="btn-general" type="button" value="Reset">
       <input id="setup_exitButton" class="btn-general" type="button" value="Exit">
     </section>
+  </main>
 </body>
 <html>
 <style>
