--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -12,6 +12,7 @@
     <script src="../js/loader.js" defer></script>
     <script src="../js/generate-question.js" defer></script>
     <script src="../js/calculate-points.js" defer></script>
+    <script src="../js/calculate-time.js" defer></script>
     <script src="../js/main.js" defer></script>
 </head>
 <body>
@@ -22,11 +23,16 @@
             <div id="quiz_progressContainer">
               <div id="quiz_progressBar"></div>
             </div>
-            <p id="quiz_questionText"></p>
-            <input id="quiz_answerChoiceButton_1" class="btn-answer-choice" type="button">
-            <input id="quiz_answerChoiceButton_2" class="btn-answer-choice" type="button">
-            <input id="quiz_answerChoiceButton_3" class="btn-answer-choice" type="button">
-            <input id="quiz_answerChoiceButton_4" class="btn-answer-choice" type="button">
+            <p id="quiz_timeRemainingText">00:00</p>
+            <p id="quiz_questionText">Question placeholder</p>
+            <input id="quiz_answerChoiceButton_1" class="btn-answer-choice" type="button" 
+              onclick="gradeQuiz(this.id)">
+            <input id="quiz_answerChoiceButton_2" class="btn-answer-choice" type="button" 
+              onclick="gradeQuiz(this.id)">
+            <input id="quiz_answerChoiceButton_3" class="btn-answer-choice" type="button" 
+              onclick="gradeQuiz(this.id)">
+            <input id="quiz_answerChoiceButton_4" class="btn-answer-choice" type="button" 
+              onclick="gradeQuiz(this.id)">
             <input id="quiz_continueButton" class="btn-general" type="button" value="Continue">
             <input id="quiz_quitButton" class="btn-general" type="button" value="Quit">
         </div>
@@ -76,16 +82,18 @@
   grid-column: 2;
   grid-row: 1 / 2;
 }
-#QUIZ_TXT_progressHeading {
-  font-family: "Rubik";
-  font-weight: 400;
-  font-size: 1rem;
+#quiz_timeRemainingText {
+  position: relative;
+  font-size: 0.9rem;
+  top: 36px;
+  grid-column: 2;
+  grid-row: 1 / 2;
 }
 #quiz_questionText {
   grid-column: 2;
   grid-row: 3;
-  margin-bottom: 25px;
-  line-height: 1.5rem;
+  margin-bottom: 18px;
+  line-height: 1.25rem;
   font-family: "Rubik";
   font-size: 1.1rem;
   text-wrap: balance;
