--- a/pgs/setup.html
+++ b/pgs/setup.html
@@ -13,6 +13,7 @@
     <script src="../js/loader.js" defer></script>
     <script src="../js/generate-question.js" defer></script>
     <script src="../js/calculate-points.js" defer></script>
+    <script src="../js/calculate-time.js" defer></script>
 </head>
 <body>
   <main>
