--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -23,7 +23,7 @@
             <div id="quiz_progressContainer">
               <div id="quiz_progressBar"></div>
             </div>
-            <p id="quiz_timeRemainingText">00:00</p>
+            <p id="quiz_timeRemainingText"></p>
             <p id="quiz_questionText">Question placeholder</p>
             <input id="quiz_answerChoiceButton_1" class="btn-answer-choice" type="button" 
               onclick="gradeQuiz(this.id)">
@@ -44,7 +44,7 @@
 #quiz_mainGridContainer {
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr 700px 1fr;
+  grid-template-columns: 1fr 550px 1fr;
   grid-template-rows: 0.25fr 0.75fr 30px 50px 50px 50px 50px 50px 1fr;
   row-gap: 15px;
   width: 100%;
@@ -78,6 +78,7 @@
 }
 #quiz_progressHeading {
   position: relative;
+  font-weight: 425;
   bottom: 10px;
   grid-column: 2;
   grid-row: 1 / 2;
@@ -92,12 +93,13 @@
 #quiz_questionText {
   grid-column: 2;
   grid-row: 3;
-  margin-bottom: 18px;
-  line-height: 1.25rem;
+  margin-bottom: 22px;
+  line-height: 1.4rem;
   font-family: "Rubik";
+  font-weight: 425;
   font-size: 1.1rem;
-  text-wrap: balance;
-  text-align: center;
+  text-wrap: pretty;
+  text-align: left;
 }
 #quiz_answerChoiceButton_1 {
   grid-column: 2;
