--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -99,7 +99,7 @@
   font-weight: 425;
   font-size: 1.1rem;
   text-wrap: pretty;
-  text-align: left;
+  text-align: center;
 }
 #quiz_answerChoiceButton_1 {
   grid-column: 2;
